# jobbintervju_statsbygg

./: .gitignore  Dockerfile  Makefile  OPPGAVE.md  README.md  TANKER_UNDERVEIS.md  TODO.md  docker-compose.yaml  pyproject.toml
dags/: kartverket_punkt_omrader.py
include/: config.py
